test/domains/ferguson/assign-from-strided.good
assign-from-strided.chpl:7: error: cannot assign from a stridable domain to an unstridable domain without an explicit cast
